--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="C:/Users/Joseph Salas/Downloads/JTattoo-1.6.11.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Joseph Salas/Desktop/commons-lang3-3.8/commons-lang3-3.8.jar"/>
+	<classpathentry kind="lib" path="src/commons-lang3-3.8.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
